# postgrad-job-search

./: .gitignore  README.md  requirements.txt
.github/workflows/: main.yml
postgrad_job_search/: pyproject.toml
postgrad_job_search/src/: Companies.xlsx  search.py
