[tool.poetry]
name = "postgrad-job-search"
version = "0.1.0"
description = ""
authors = ["necabotheking <aichacamara@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
selenium = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
