[tool.poetry]
name = "postgrad-job-search"
version = "0.1.0"
description = ""
authors = ["necabotheking <aichacamara@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pretty-html-table = "^0.9.16"
python-dotenv = "^1.0.1"
selenium = "^4.24.0"
openpyxl = "^3.1.5"
numpy = "^2.1.0"
setuptools = "^74.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
